--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,24 +13,36 @@
   "admin_panel": "Admin Panel",
   "contacts": "Contacts",
   "payments": "Payments",
+  "filter_by_service": "Filter by service",
+  "filter_by_status": "Filter by status",
   "service": "Service",
   "amount": "Amount",
   "date": "Date",
-  "payment_status": "Payment Status",
+  "payment_status": "Payment status",
   "successful": "Successful",
-  "filter_by_service": "Filter by service",
-  "filter_by_status": "Filter by status",
-  "filter_by_date_start": "Start date",
-  "filter_by_date_end": "End date",
-  "back_to_panel": "Back to Panel",
+  "pending": "Pending",
+  "failed": "Failed",
+  "back_to_panel": "Back to panel",
   "search_by_name_email": "Search by name or email",
   "name": "Name",
   "email": "Email",
   "message": "Message",
   "country": "Country",
-  "main_title": "Professional PC and Laptop Repair",
-  "main_subtitle": "Free diagnostics and fast solutions for your device.",
-  "contact_us": "Contact us",
-  "date_format": "MM/DD/YYYY hh:mm A",
-  "currency_format": "USD ${amount}"
+  "main_title": "Technology Solutions Within Your Reach",
+  "main_subtitle": "Repair, maintenance, and technical support for computers and laptops.",
+  "contact_us": "Contact Us",
+  "our_services": "Our Services",
+  "software_repair": "Software Repair",
+  "software_repair_desc": "Virus removal, formatting, data recovery, and more.",
+  "hardware_repair": "Hardware Repair",
+  "hardware_repair_desc": "Parts replacement, internal cleaning, preventive maintenance.",
+  "tech_support": "Technical Support",
+  "tech_support_desc": "Network setup, printers, and personalized advice.",
+  "hire": "Hire",
+  "payment_form": "Payment Form",
+  "currency_format": "USD ${amount}",
+  "bs_currency": "Bolívares",
+  "pay": "Pay",
+  "send": "Send",
+  "all_rights_reserved": "All rights reserved."
 }
