--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -13,24 +13,42 @@
   "admin_panel": "Panel de Administración",
   "contacts": "Contactos",
   "payments": "Pagos",
+  "filter_by_service": "Filtrar por servicio",
+  "filter_by_status": "Filtrar por estado",
   "service": "Servicio",
   "amount": "Monto",
   "date": "Fecha",
-  "payment_status": "Estado de Pago",
+  "payment_status": "Estado del pago",
   "successful": "Exitoso",
-  "filter_by_service": "Filtrar por servicio",
-  "filter_by_status": "Filtrar por estado",
-  "filter_by_date_start": "Fecha inicio",
-  "filter_by_date_end": "Fecha fin",
-  "back_to_panel": "Volver al Panel",
-  "search_by_name_email": "Buscar por nombre o email",
+  "pending": "Pendiente",
+  "failed": "Fallido",
+  "back_to_panel": "Volver al panel",
+  "search_by_name_email": "Buscar por nombre o correo",
   "name": "Nombre",
   "email": "Correo electrónico",
   "message": "Mensaje",
   "country": "País",
-  "main_title": "Reparación Profesional de PCs y Laptops",
-  "main_subtitle": "Diagnóstico gratuito y soluciones rápidas para tu equipo.",
+  "main_title": "Soluciones Tecnológicas a tu Alcance",
+  "main_subtitle": "Reparación, mantenimiento y soporte técnico para computadoras y laptops.",
   "contact_us": "Contáctanos",
-  "date_format": "DD/MM/YYYY HH:mm",
-  "currency_format": "VES {amount} Bs"
+  "our_services": "Nuestros Servicios",
+  "software_repair": "Reparación de Software",
+  "software_repair_desc": "Eliminación de virus, formateo, recuperación de datos y más.",
+  "hardware_repair": "Reparación de Hardware",
+  "hardware_repair_desc": "Cambio de piezas, limpieza interna, mantenimiento preventivo.",
+  "tech_support": "Soporte Técnico",
+  "tech_support_desc": "Configuración de redes, impresoras y asesoría personalizada.",
+  "hire": "Contratar",
+  "payment_form": "Formulario de Pago",
+  "currency_format": "VES {amount} Bs",
+  "bs_currency": "Bolívares",
+  "pay": "Pagar",
+  "send": "Enviar",
+  "all_rights_reserved": "Todos los derechos reservados.",
+  "dashboard_title": "Panel de Control",
+  "total_payments": "Pagos Totales",
+  "total_clients": "Clientes Totales",
+  "pending_services": "Servicios Pendientes",
+  "recent_payments": "Pagos Recientes",
+  "client": "Cliente"
 }
