--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,15 +1,15 @@
 {
   "title": "Service Tecno",
-  "login": "Login",
+  "dashboard": "Dashboard",
   "logout": "Logout",
+  "login": "Login",
   "register": "Register",
-  "register_admin": "Admin Registration",
+  "register_admin": "Register as Admin",
   "already_account_login": "Already have an account? Login",
   "no_account_register": "Don't have an account? Register",
   "login_with_google": "Login with Google",
   "username": "Username",
   "password": "Password",
-  "dashboard": "Dashboard",
   "admin_panel": "Admin Panel",
   "contacts": "Contacts",
   "payments": "Payments",
@@ -18,7 +18,7 @@
   "service": "Service",
   "amount": "Amount",
   "date": "Date",
-  "payment_status": "Payment status",
+  "payment_status": "Payment Status",
   "successful": "Successful",
   "pending": "Pending",
   "failed": "Failed",
@@ -44,5 +44,15 @@
   "bs_currency": "Bolívares",
   "pay": "Pay",
   "send": "Send",
-  "all_rights_reserved": "All rights reserved."
+  "all_rights_reserved": "All rights reserved.",
+  "card_name": "Cardholder Name",
+  "card_number": "Card Number",
+  "exp_month": "Expiration Month",
+  "exp_year": "Expiration Year",
+  "cvv": "CVV",
+  "currency": "Currency",
+  "your_name": "Your name",
+  "your_email": "Your email",
+  "your_message": "Your message",
+  "payment_success": "Payment successful!"
 }
