--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -24,9 +24,6 @@
   "failed": "Fallido",
   "back_to_panel": "Volver al panel",
   "search_by_name_email": "Buscar por nombre o correo",
-  "name": "Nombre",
-  "email": "Correo electrónico",
-  "message": "Mensaje",
   "country": "País",
   "main_title": "Soluciones Tecnológicas a tu Alcance",
   "main_subtitle": "Reparación, mantenimiento y soporte técnico para computadoras y laptops.",
@@ -39,10 +36,21 @@
   "tech_support": "Soporte Técnico",
   "tech_support_desc": "Configuración de redes, impresoras y asesoría personalizada.",
   "hire": "Contratar",
-  "payment_form": "Formulario de Pago",
-  "currency_format": "VES {amount} Bs",
-  "bs_currency": "Bolívares",
+  "payment_form": "Formulario de pago",
+  "payment_success": "¡Pago realizado con éxito!",
+  "email": "Correo electrónico",
+  "card_name": "Nombre en la tarjeta",
+  "card_number": "Número de tarjeta",
+  "exp_month": "Mes de expiración",
+  "exp_year": "Año de expiración",
+  "cvv": "CVV",
+  "currency": "Moneda",
   "pay": "Pagar",
+  "name": "Nombre",
+  "your_name": "Tu nombre",
+  "your_email": "Tu correo",
+  "message": "Mensaje",
+  "your_message": "Tu mensaje",
   "send": "Enviar",
   "all_rights_reserved": "Todos los derechos reservados.",
   "dashboard_title": "Panel de Control",
